Added menu buttons with rounded borders and images

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,7 +22,7 @@
         android:textColor="@color/colorAccent"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:textSize="@dimen/abc_text_size_headline_material" />
+        android:textSize="@dimen/abc_text_size_display_1_material" />
 
     <ScrollView
         android:layout_width="fill_parent"
@@ -36,29 +36,47 @@
     <LinearLayout
         android:id="@+id/menuBar"
         android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true">
 
         <!-- Some Buttons -->
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/button" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/button2" />
+        <ImageButton
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="10dp"
+            android:id="@+id/imageButton"
+            android:src="@drawable/armColored"
+            android:scaleType="fitCenter"
+            android:padding="5dp"
+            android:background="@drawable/round_corner"
+            android:layout_weight="1"
+            />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/button3" />
+        <ImageButton
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="10dp"
+            android:id="@+id/imageButton2"
+            android:src="@drawable/graphColored"
+            android:scaleType="fitCenter"
+            android:padding="10dp"
+            android:background="@drawable/round_corner"
+            android:layout_weight="1"
+             />
+
+        <ImageButton
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="10dp"
+            android:id="@+id/imageButton3"
+            android:src="@drawable/checklistColored"
+            android:scaleType="fitCenter"
+            android:padding="5dp"
+            android:background="@drawable/round_corner"
+            android:layout_weight="1" />
     </LinearLayout>
 
 </RelativeLayout>
