Resolved errors in the list and recycler view. Added various model classes with simple functions. Added new images and updated fragment_front_view layout.

--- a/app/src/main/res/layout/fragment_workout_list.xml
+++ b/app/src/main/res/layout/fragment_workout_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="edu.westga.workoutpal.View.WorkoutFragment"
-    tools:listitem="@layout/fragment_workout" />
+    tools:context=".View.WorkoutFragmentList"
+    tools:listitem="@layout/fragment_workout_item" />
