--- a/app/src/main/res/layout/fragment_front_view.xml
+++ b/app/src/main/res/layout/fragment_front_view.xml
@@ -1,13 +1,27 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="edu.westga.workoutpal.View.FrontViewFragment">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    tools:context="edu.westga.workoutpal.View.FrontViewFragment"
+    android:background="@color/colorPrimary">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ImageView
+        android:id="@+id/image_areas"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:scaleType="fitCenter"
+        android:visibility="invisible"
+        android:src="@drawable/bodymask"
+        android:padding="5dp"
+        android:contentDescription="@string/bodymask_string" />
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/body"
+        android:background="@color/colorPrimary"
+        android:padding="5dp"
+        android:contentDescription="@string/body_string" />
 
 </FrameLayout>
