Added txt file assets, finished WorkoutController's ability to generate WorkoutContent's from text file data, fixed recyclerview inside of scrollview non-display issue. Changed the frag_description tag depending on which fragment is visible.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,11 +29,13 @@
         android:shadowRadius="0.01" />
 
     <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="400dp"
+        android:layout_height="100dp"
+        android:fillViewport="true"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/header"
         android:id="@+id/frag_content"
         android:layout_above="@+id/frag_description">
